--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/recipename.html">Pan-Seared Steak</a>
+    <a href="recipes/steak.html">Pan-Seared Steak</a>
 </body>
 </html>
