--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -7,5 +7,30 @@
 </head>
 <body>
     <h1>Pan-Seared Steak</h1>
+    <img src="../img/steakimg.jpeg" alt="A nice steak" height="525" width="350">
+    <p>The Finished Product</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 Steaks, 1lb each, 1 1/4" thick</li>
+        <li>1/2 Tbsp vegetable oil</li>
+        <li>1 1/2 tsp sea salt</li>
+        <li>1 tsp grounded black pepper</li>
+        <li>2 Tbsp unsalted butter</li>
+        <li>2 cloves garlic, peeled and quartered</li>
+        <li>1 sprig fresh rosemary</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Thoroughly pat steak dry with paper towels. Just before cooking, generously season with 1 1/2 tsp salt and 1 tsp black pepper</li>
+        <li>Heat the cast iron pan until hot then add 1/2 Tbsp oil over medium-high heat, swirling to coat. Once the oil is very hot, add steaks to the skillet. Sear the steaks on the first side for 4 minutes until a brown crust has formed then flip and cook another 3-4 minutes. Using tongs, turn the steak on its sides to render the white fat and sear the edges (1-minute per edge).</li>
+        <li>Reduce heat to medium and immediately add 2 Tbsp butter, quartered garlic cloves and rosemary to the pan. Spoon the butter sauce over the steak, tilting the pan to get butter on your spoon. Continue spooning the sauce over the steak for a minute or until the steak is about 5-10 degrees from your desired doneness (the temperature will continue to rise another 5-10 degrees while steaks rest).</li>
+        <li>Transfer steak to a cutting board, loosely cover and rest 10 minutes before slicing into 1/2" strips to serve. Spoon extra butter sauce over sliced steak to serve.</li>
+    </ol>
+    <strong>Steak Doneness Chart:</strong>
+    <p>Medium Rare: 145 Degrees F</p>
+    <p>Medium: 160 Degrees F</p>
+    <p>Well Done: 170 Degrees F</p>
+    <p>Skill Level: Easy</p>
+    <p>Cost to Make: $15 to $20</p>
 </body>
 </html>
