Make Garlic Bread page
Have a page with ingredients and instructions, and add link to this
page from the main page

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -9,6 +9,9 @@
     <h1>Pan-Seared Steak</h1>
     <img src="../img/steakimg.jpeg" alt="A nice steak" height="525" width="350">
     <p>The Finished Product</p>
+    <p>I know seeing all those amazing looking steaks on social media always makes you hungry. I know it makes me.
+        This recipe will show you an amazing way to make a perfect pan-seared steak
+    </p>
     <h3>Ingredients</h3>
     <ul>
         <li>2 Steaks, 1lb each, 1 1/4" thick</li>
@@ -32,5 +35,6 @@
     <p>Well Done: 170 Degrees F</p>
     <p>Skill Level: Easy</p>
     <p>Cost to Make: $15 to $20</p>
+    <a href="../index.html">Home Page</a>
 </body>
 </html>
