--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/steak.html">Pan-Seared Steak</a>
+    <ul>
+        <li><a href="recipes/steak.html">Pan-Seared Steak</a></li>
+        <li><a href="recipes/garlicbread.html">Garlic Bread</a></li>
+    </ul>
 </body>
 </html>
