Make the Shirley Temple file
Add Ingredients and instructions for shirley temple, and add a link
from the home page.

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steak Recipe</title>
+    <title>Steak</title>
 </head>
 <body>
     <h1>Pan-Seared Steak</h1>
@@ -29,12 +29,15 @@
         <li>Reduce heat to medium and immediately add 2 Tbsp butter, quartered garlic cloves and rosemary to the pan. Spoon the butter sauce over the steak, tilting the pan to get butter on your spoon. Continue spooning the sauce over the steak for a minute or until the steak is about 5-10 degrees from your desired doneness (the temperature will continue to rise another 5-10 degrees while steaks rest).</li>
         <li>Transfer steak to a cutting board, loosely cover and rest 10 minutes before slicing into 1/2" strips to serve. Spoon extra butter sauce over sliced steak to serve.</li>
     </ol>
+    <h3>Notes</h3>
     <strong>Steak Doneness Chart:</strong>
-    <p>Medium Rare: 145 Degrees F</p>
-    <p>Medium: 160 Degrees F</p>
-    <p>Well Done: 170 Degrees F</p>
-    <p>Skill Level: Easy</p>
-    <p>Cost to Make: $15 to $20</p>
+    <ul>
+    <li>Medium Rare: 145 Degrees F</li>
+    <li>Medium: 160 Degrees F</li>
+    <li>Well Done: 170 Degrees F</li>
+    </ul>
+    <p><strong>Skill Level:</strong> Easy</p>
+    <p><strong>Cost to Make:</strong> $15 to $20</p>
     <a href="../index.html">Home Page</a>
 </body>
 </html>
