--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/steak.html">Pan-Seared Steak</a></li>
         <li><a href="recipes/garlicbread.html">Garlic Bread</a></li>
+        <li><a href="recipes/shirleytemple.html">Shirley Temple</a></li>
     </ul>
 </body>
 </html>
